--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 ---
 tags: [spring-cloud, ribbon]
-projects: [spring-cloud]
+projects: [spring-cloud, spring-cloud-netflix]
 ---
 :spring_version: current
 :spring_boot_version: 1.3.3.RELEASE
